force-app/main/default/objects/CB_Quote_Product__c/CB_Quote_Product__c.object-meta.xml
<CustomObject>
    <label>CB Quote Product</label>
    <nameField>
        <label>CB Quote Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Quote Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>