force-app/main/default/objects/CB_Quote_Product__c/fields/CB_Quote__c.field-meta.xml
<CustomField>
    <fullName>CB_Quote__c</fullName>
    <label>CB Quote</label>
    <referenceTo>CB_Quote__c</referenceTo>
    <relationshipLabel>CB Quote Products</relationshipLabel>
    <relationshipName>CB_Quote_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>