force-app/main/default/objects/CB_Quote_Product__c/fields/SetupFee__c.field-meta.xml
<CustomField>
    <fullName>SetupFee__c</fullName>
    <label>SetupFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>